initial impl of borrowedBookDetails